syntax = "proto3";

package reatang.grpc_php_abstract.tests.mock;

option php_class_prefix = "PB\\";
option php_metadata_namespace = "Reatang\\GrpcPHPAbstract\\Tests\\Mock";
option php_namespace = "Reatang\\GrpcPHPAbstract\\Tests\\Mock";
option php_generic_services = true;

message PingRequest {
  string ping = 1;
}

message PingResponse {
  string pong = 1;
}

message OtelRequest {
}

message OtelResponse {
  string trace = 1;
  string baggage = 2;
}

service TestServer {
  rpc Ping(PingRequest) returns(PingResponse);

  rpc Otel(OtelRequest) returns(OtelResponse);
}